dnl Configure source for abcm2ps -*- sh -*-
dnl Copyright (C) 2001-2007 JF Moine.

AC_INIT(abc2ps.h)

VERSION=4.12.30
VDATE='May 28, 2007'

AC_CANONICAL_SYSTEM

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
dnl AC_PROG_MAKE_SET

AC_CONFIG_HEADER(config.h)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h)

if test "X$GCC" = "Xyes" ; then
	CFLAGS="$CFLAGS -Wall -pipe"
fi

test "x$prefix" = xNONE && prefix=$ac_default_prefix

dnl Check for options
AC_ARG_ENABLE(a4,
[  --enable-a4             Handle european A4 format instead of default US letter],
[if test "$enableval" = "yes"; then
  AC_DEFINE(A4_FORMAT)dnl
fi])

AC_ARG_ENABLE(deco-is-roll,
[  --enable-deco-is-roll   Have ~ as roll instead of twiddle],
[if test "$enableval" = "yes"; then
  AC_DEFINE(DECO_IS_ROLL)dnl
fi])

AC_ARG_ENABLE(clef-transpose,
[  --enable-clef-transpose Have clef changing the note pitch],
[if test "$enableval" = "yes"; then
  AC_DEFINE(CLEF_TRANSPOSE)dnl
fi])

DEFAULT_FDIR="$prefix/share/abcm2ps"
AC_ARG_WITH(def-fdir,
  [  --with-def-fdir=directory  Default format directory],
  [DEFAULT_FDIR="$withval"])

dnl Build characteristics
AC_SUBST(VERSION)

AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(VDATE, "$VDATE")
AC_DEFINE_UNQUOTED(DEFAULT_FDIR, "$DEFAULT_FDIR")

AC_OUTPUT(Makefile)
